# self-taught

server/: Cargo.toml  docker-compose.yml
server/datamodel/: Cargo.toml
server/datamodel/migrations/2021-01-10-224045_create_subject/: down.sql  up.sql
server/datamodel/migrations/2021-01-10-224448_create_check_point/: down.sql  up.sql
server/datamodel/src/: lib.rs  models.rs  pool.rs  schema.rs
server/datamodel/src/models/: check_point.rs  subject.rs
server/src/: main.rs  routes.rs
server/src/routes/: subjects.rs
