[package]
name = "server"
version = "0.1.0"
authors = ["marcioordonez <marcio.v.ordonez@gmail.com>"]
edition = "2018"


[dependencies]
actix-web = "3"
actix-cors = { version = "0.4.0"}
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datamodel = { path = "datamodel" }
derive_more = "0.99.11"
[workspace]
members = ["datamodel"]
