[package]
name = "datamodel"
version = "0.1.0"
authors = ["marcioordonez <marcio.v.ordonez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { version = "1.4.4", features = ["postgres","chrono","r2d2"] }
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]} 
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
